# ABM_Research

./: .gitignore  README.md  STAGE1_summary.md  STAGE2_plan.md  pyproject.toml  research_framework_handoff.md
analysis/: __init__.py  demand_model.py  fit_report.md  fitted_params.json  load_data.py  rider_arrival_model.py  run_analysis.py  scenario_loader.py
configs/: baseline.yaml  sensitivity.yaml
configs/modes/: h0_direct.yaml  h1_sync.yaml  h2_queued.yaml  h3_locker.yaml
experiments/: __init__.py  e1_mode_baseline.py  e2_k_sweep.py  e3_typology.py  e4_locker_sizing.py  e5_wage_sensitivity.py  e6_pareto.py  sensitivity.py  validation.py
simulation/: __init__.py  costs.py  model.py  space.py  visualize.py
simulation/agents/: __init__.py  building_manager.py  control_system.py  customer.py  elevator.py  external_rider.py  locker.py  pedestrian.py  robot.py
tests/: __init__.py  test_agents.py  test_cost_model.py  test_demand_model.py  test_elevator_physics.py  test_load_data.py  test_locker.py  test_rider_arrival_model.py  test_scenario_loader.py  test_space.py
