[project]
name = "abm-handoff"
version = "0.1.0"
description = "ABM simulation of robot-mediated lobby handoff in smart buildings"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Koreasw", email = "seongwook88@hotmail.com" }]

dependencies = [
    # ABM core
    "mesa>=3.0",
    # Visualization
    "solara>=1.30",
    "altair>=5.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # Spatial / graph
    "networkx>=3.3",
    "shapely>=2.0",
    # Numeric / data
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=16.0",
    # Stats / fitting
    "scipy>=1.13",
    "statsmodels>=0.14",
    "scikit-learn>=1.5",
    # Sensitivity / multi-objective
    "salib>=1.5",
    "pymoo>=0.6",
    # Experiment management
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "hydra-core>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analysis", "simulation", "experiments"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = ["-ra", "--strict-markers"]
